working training and prediction notebooks for torch

--- a/notebooks/LSTM_tf_train_model.ipynb
+++ b/notebooks/LSTM_tf_train_model.ipynb
@@ -3,46 +3,23 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "built-canyon",
+   "id": "gorgeous-conditioning",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os, sys\n",
     "os.environ['PYTHONHASHSEED']=str(1)\n",
-    "import argparse\n",
-    "import random\n",
-    "\n",
-    "# RNN for training\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import math\n",
-    "\n",
-    "import pickle\n",
+    "PATH_TO_REPO = '/'.join(os.getcwd().split('/')[:-1])\n",
+    "sys.path.append(PATH_TO_REPO)\n",
     "\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras.layers import Input\n",
-    "from tensorflow.keras.models import Model\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense\n",
-    "from tensorflow.keras.layers import LSTM\n",
-    "from sklearn.metrics import mean_squared_error"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "touched-earth",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PATH_TO_REPO = '/'.join(os.getcwd().split('/')[:-1])\n",
-    "sys.path.append(PATH_TO_REPO)"
+    "import random"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "meaningful-branch",
+   "id": "color-leisure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "alike-letters",
+   "id": "theoretical-freight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "trained-distinction",
+   "id": "delayed-problem",
    "metadata": {},
    "source": [
     "Set input arguments for training:\n",
@@ -87,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "powered-maintenance",
+   "id": "perceived-cuisine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "orange-guyana",
+   "id": "broad-contributor",
    "metadata": {},
    "source": [
     "During training, the dataset is shuffled in a randomized fashion. To make the results reproduciable, initialize the seed."
@@ -114,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cooked-arrest",
+   "id": "favorite-aruba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "flying-assurance",
+   "id": "threaded-hearing",
    "metadata": {},
    "source": [
     "Import data for a given crystal from the csv file. Class lstm_data_processor can be used to construct normalized arrays that can be used for training. The dataset is split into training and testing based on a given split provided."
@@ -132,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "secondary-reform",
+   "id": "sexual-there",
    "metadata": {
     "scrolled": true
    },
@@ -182,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "useful-falls",
+   "id": "drawn-latin",
    "metadata": {},
    "source": [
     "Import a model architecture and train the model."
@@ -191,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "careful-technology",
+   "id": "demographic-column",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "crude-belle",
+   "id": "burning-piece",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "empirical-gamma",
+   "id": "enhanced-welding",
    "metadata": {},
    "outputs": [
     {
@@ -299,35 +276,6 @@
     "plt.legend()\n",
     "plt.savefig('{}/plots/training_loss.png'.format(path_to_output))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "eleven-brazil",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x2b134d1147f0>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "training_output.epochs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "narrative-decline",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
